--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,4 @@ rand = "0.8.5"
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 hex = "0.4.3"
+async-stream = "0.3.5"
